[ENH] Tile made more flexible, layout improvements for mobile devices

--- a/5-objects/_objects.grid.scss
+++ b/5-objects/_objects.grid.scss
@@ -88,6 +88,8 @@ $block-mobile-margin:       $base-margin / 1.5;
         padding-left: $block-mobile-large-margin;
         padding-right: $block-mobile-large-margin;
     }
+
+    &.no-bg { background: inherit; } // Eliminates background
 }
 
 
