--- a/5-objects/_objects.widgets.scss
+++ b/5-objects/_objects.widgets.scss
@@ -97,19 +97,18 @@ $tile-bg:      #f0f0f0;
         .title { font-size: 1.25em; }
 
         .btn-holder {
-            float: right;
-            flex-grow: 1;
-            text-align: right;
-            min-width: 15em;
+            flex: 0 0 auto;
             margin: 0 0 1.5em 1.5em;
+            min-width: 15em;
+            text-align: right;
 
             .btn { margin: 0; }
 
             .note {
-                text-align: right;
-                font-size: 90%;
                 display: block;
                 margin-top: .35em;
+                text-align: right;
+                font-size: 90%;
             }
 
             .link {
@@ -126,6 +125,7 @@ $tile-bg:      #f0f0f0;
 
         .tile__list {
             margin: 0 0 .8em;
+            flex: 1 1 0%;
 
             > li {
                 display: inline-block;
@@ -135,10 +135,7 @@ $tile-bg:      #f0f0f0;
             .tooltip-icon { margin-left: 0; }
         }
 
-        .description {
-            display: block;
-            max-width: 40em;
-        }
+        .description { display: block; }
 
         /** Tiles' responsivity. */
         @include media ( $tablet-and-smaller ) {
@@ -148,9 +145,9 @@ $tile-bg:      #f0f0f0;
         @include media ( $mobile-large-and-smaller ) {
             .tile__body{ flex-wrap: wrap; }
             .btn-holder {
+                order: 2;
                 margin: 1.2em 0 0;
                 width: 100%;
-                float: none;
                 text-align: center;
 
                 .note { text-align: inherit; }
@@ -164,7 +161,10 @@ $tile-bg:      #f0f0f0;
 .tile__body,
 .tile__list { margin: 0 $tile-padding 1em; }
 
-.tile__body { display: flex; }
+.tile__body {
+    display: flex;
+    flex-wrap: wrap;
+}
 
 .tile__list {
     > li {
