[ENH] refactors icons, removes unused ones, removes unused icons format.

--- a/1-settings/_settings.paths.scss
+++ b/1-settings/_settings.paths.scss
@@ -33,4 +33,4 @@ $path-cdn-fonts:   $path-cdn + '/fonts' !default;
 /* ===== FONTS ============================================================== */
 
 $path-font-victoria:      $path-cdn-fonts + '/NationalWebLF' !default;
-$path-fonticon-victoria:  $path-fonts + '/vic-icons' !default;
+$path-fonticon-victoria:  $path-fonts + '/icons' !default;
