--- a/3-generic/_generic.fonts.scss
+++ b/3-generic/_generic.fonts.scss
@@ -11,4 +11,4 @@
 @include font-face( $font-victoria, "#{$path-font-victoria}-Extrabold", $weight-extrabold, $file-formats: ttf woff woff2 );
 
 // Font icons
-@include font-face( $font-victoria-icons, "#{$path-fonticon-victoria}", $file-formats: eot woff ttf svg );
+@include font-face( $font-victoria-icons, "#{$path-fonticon-victoria}", $file-formats: woff2 woff ttf );
