--- a/5-objects/_objects.icons.scss
+++ b/5-objects/_objects.icons.scss
@@ -10,7 +10,7 @@
     }
 }
 
-
+/** Loading spinner animation */
 @-webkit-keyframes spin {
     0%   {
         -webkit-transform: rotate(0deg);  /* Chrome, Opera 15+, Safari 3.1+ */
@@ -46,58 +46,70 @@ $ico-margin:       .9em;
 /* ===== FONT ICON'S CODES ================================================== */
 
 
-$ico-code-study-cap-thin:  '\e806';
-$ico-code-bubble-thin:     '\e80a';
-$ico-code-heart-thin:      '\e808';
+$ico-code-study-cap-thin:  '\e807';
+$ico-code-bubble-thin:     '\e80c';
 
-$ico-code-arr-right:       '\e807';
-$ico-code-arr-left:        '\e809';
-$ico-code-arr-down:        '\e80b';
-$ico-code-arr-up:          '\e80c';
+$ico-code-arr-right:       '\e809';
+$ico-code-arr-left:        '\e80b';
+$ico-code-arr-down:        '\e80d';
+$ico-code-arr-up:          '\e80e';
 
-$ico-code-arr-short-down:  '\e80d';
-$ico-code-arr-short-left:  '\e80e';
-$ico-code-arr-short-right: '\e80f';
-$ico-code-arr-short-up:    '\e810';
+$ico-code-arr-short-down:  '\e80f';
+$ico-code-arr-short-left:  '\e810';
+$ico-code-arr-short-right: '\e811';
+$ico-code-arr-short-up:    '\e812';
 
-$ico-code-help:            '\e811';
-$ico-code-quote-start:     '\e812';
-$ico-code-quote-end:       '\e813';
-$ico-code-phone:           '\e814';
-$ico-code-mail:            '\e815';
-$ico-code-dollar:          '\e816';
-$ico-code-clock:           '\e805';
+$ico-code-help:            '\e813';
+$ico-code-quote-start:     '\e814';
+$ico-code-quote-end:       '\e815';
+$ico-code-phone:           '\e817';
+$ico-code-mail:            '\e818';
+$ico-code-clock:           '\e806';
+$ico-clock-back:           '\e816';
 
 $ico-code-star:            '\e800';
-$ico-code-link-ext:        '\e801'; //TODO: DEPRECATED
-$ico-code-info:            '\e802';
-$ico-code-book:            '\e803';
-$ico-code-cancel:          '\e804';
-$ico-code-ext-link:        '\e817';
-$ico-code-ok:              '\e818';
-$ico-code-youtube-play:    '\e819';
+$ico-code-hourglass:       '\e801';
+$ico-code-info:            '\e803';
+$ico-code-book:            '\e804';
+$ico-code-cancel:          '\e805';
+$ico-code-ext-link:        '\e81a';
+$ico-code-ok:              '\e81b';
+$ico-code-youtube-play:    '\e81c';
 
-$ico-code-spin:            '\e81a';
-$ico-code-search:          '\e81b';
-$ico-code-person:          '\e81c';
+$ico-code-spin:            '\e81d';
+$ico-code-search:          '\e81e';
+$ico-code-person:          '\e81f';
+$ico-code-list:            '\e808';
 
-$ico-code-location:        '\e81d';
-$ico-code-tick:            '\e81e';
-$ico-code-calendar:        '\e81f';
-$ico-code-flag:            '\e820';
+$ico-code-location:        '\e820';
+$ico-code-tick:            '\e821';
+$ico-code-calendar:        '\e822';
+$ico-code-flag:            '\e823';
 
-$ico-code-globe:           '\e821';
-$ico-code-money:           '\e822';
-$ico-code-exchange:          '\e823';
+$ico-code-warning:         '\e824';
+$ico-code-gauge:           '\e825';
+$ico-code-group:           '\e826';
+
+$ico-code-globe:           '\e827';
+$ico-code-money:           '\e828';
+$ico-code-exchange:        '\e829';
+
+
+
 
 
 /* ===== ENTITY CODES ======================================================= */
+
 
 $code-triangle-right: '\25b8';
 $code-triangle-down:  '\25be';
 
 
+
+
+
 /* ===== ICONS DEFINITIONS ================================================== */
+
 
 .ico {
     font-weight: normal;
@@ -109,7 +121,7 @@ $code-triangle-down:  '\25be';
     /* Font icons */
 
     // Thin icons (menus | headers)
-    @include define-icon( heart, $ico-code-heart-thin );
+    @include define-icon( list, $ico-code-list );
     @include define-icon( talk-bubble, $ico-code-bubble-thin );
     @include define-icon( study-cap, $ico-code-study-cap-thin ) {
         position: relative; top: 2px;
@@ -118,10 +130,15 @@ $code-triangle-down:  '\25be';
     // Standard icons (general usage, eg. buttons, links, headers, one liners)
     @include define-icon( email, $ico-code-mail );
     @include define-icon( phone, $ico-code-phone );
+
+    // Default tooltip
     @include define-icon( tooltip-icon, $ico-code-help );
 
+        // Extensions
+        &.tooltip-icon.warn { content: $ico-code-warning; }
+
     @include define-icon( clock, $ico-code-clock );
-    @include define-icon( dollar, $ico-code-dollar );
+    @include define-icon( clock-back, $ico-clock-back );
 
     @include define-icon( quote-start, $ico-code-quote-start );
     @include define-icon( quote-end, $ico-code-quote-end );
@@ -137,7 +154,7 @@ $code-triangle-down:  '\25be';
     @include define-icon( arr-short-up, $ico-code-arr-short-up );
 
     @include define-icon( star, $ico-code-star );
-    @include define-icon( link-ext, $ico-code-link-ext );
+    @include define-icon( hourglass, $ico-code-hourglass );
     @include define-icon( info, $ico-code-info );
     @include define-icon( book, $ico-code-book );
     @include define-icon( cancel, $ico-code-cancel );
@@ -160,6 +177,10 @@ $code-triangle-down:  '\25be';
     @include define-icon( globe, $ico-code-globe );
     @include define-icon( money, $ico-code-money );
     @include define-icon( exchange, $ico-code-exchange );
+
+    @include define-icon( warning-triangle, $ico-code-warning );
+    @include define-icon( gauge, $ico-code-gauge );
+    @include define-icon( group, $ico-code-group );
 
 
     /* CSS only icons. */
