--- a/6-components/_components.detail-overview.scss
+++ b/6-components/_components.detail-overview.scss
@@ -12,7 +12,7 @@ $detail-overview-text-size: .9em;
 
 
 .detail-overview {
-    background-color: $detail-overview-bg;
+    &.highlighted { background-color: $detail-overview-bg; }
 
     // Inside a collapsible panel
     .collapsible & {
