--- a/6-components/_components.detail-overview.scss
+++ b/6-components/_components.detail-overview.scss
@@ -15,9 +15,7 @@ $detail-overview-text-size: .9em;
     &.highlighted { background-color: $detail-overview-bg; }
 
     // Inside a collapsible panel
-    .collapsible & {
-        background-color: inherit;
-    }
+    .collapsible & { background-color: inherit; }
 
     // Angular-specific - remove if necessary
     collapsible{
@@ -99,7 +97,8 @@ $detail-overview-text-size: .9em;
         }
 
         .collapsible__control {
-            margin-top: 0; margin-bottom: 0;
+            margin-top: 0;
+            margin-bottom: 0;
             font-size: $detail-overview-text-size;
 
             @include media( $tablet-and-bigger ) {
@@ -117,7 +116,7 @@ $detail-overview-text-size: .9em;
 
     // Key information for students block
     .kis {
-        padding-right: 0;
+        margin-right: 0;
         order: 2;
 
         // Makes the block after flexible which makes KIS float right
