Upgrades icons, small UI fixes of select2 and listed tags, fixes buggy flex-box behaviour of .flexgrid (#36)
* [ENH] Styles tags so they can be used within standard lists.

* [FIX] Allows .description in the tile to stretch to the full width.

* [ENH] Adds right margin to the select2 selector

* [ENH] refactors icons, removes unused ones, removes unused icons format.

* [ENH] Adds warning tooltip icon, makes two column block able to stretch to full width, makes background of the detail overview optional.

* [FIX] Flexbox after-refresh rendering corrected by changing `padding-right` to `margin-right`

--- a/5-objects/_objects.grid.scss
+++ b/5-objects/_objects.grid.scss
@@ -129,20 +129,22 @@ $block-mobile-margin:       $base-margin / 1.5;
 
             // Left column
             &:first-child {
-                @include make-table-column( $two-col-layout-left-ratio);
+                @include make-table-column( $two-col-layout-left-ratio );
             }
 
             // Right column
             &:last-child {
-                @include make-table-column( $two-col-layout-right-ratio);
+                @include make-table-column( $two-col-layout-right-ratio );
                 padding-top: $block-margin;
             }
 
             &.btns-holder {
                 text-align: right;
-                @include make-table-column( $two-col-layout-right-ratio);
+                @include make-table-column( $two-col-layout-right-ratio );
             }
         }
+
+        &.stretch { width: 100%; }
     }
 
     &.swap-columns {
@@ -181,6 +183,8 @@ $block-mobile-margin:       $base-margin / 1.5;
                     border-top: none;
                 }
             }
+
+            &.stretch { border-left: 0; }
         }
     }
 }
@@ -221,12 +225,12 @@ $block-mobile-margin:       $base-margin / 1.5;
     .flexi-block {
         width: auto;
         margin-bottom: 1em;
-        padding-right: 8%;
+        margin-right: 8%;
 
         &:last-child { margin-bottom: 0; }
 
         &.stretch {
             width: 100%;
-            padding-right: 0;
+            margin-right: 0;
         }
     }
