--- a/2-tools/_tools.mixins.scss
+++ b/2-tools/_tools.mixins.scss
@@ -115,6 +115,7 @@
  */
 @mixin iconify( $display: inline-block, $ico-code: "", $font-icon-family: $font-victoria-icons ) {
     @include objectify( $display, $ico-code );
+    text-decoration: none; // IE11+ fix to remove underline from icons
     font-family: $font-icon-family;
 }
 
