[ADD] Styles for collapsing show more/less link inside subqualifications.

--- a/6-components/_components.degree-requirements.scss
+++ b/6-components/_components.degree-requirements.scss
@@ -162,7 +162,6 @@
     }
 
 
-
     .container-opened {
         border-bottom: 1px solid $grey-gallery;
         margin-bottom: $base-margin;
@@ -195,5 +194,23 @@
     .sector.nested-section {
          .toggle-header { padding-top: $base-margin; }
          &:last-child   { border-bottom: 0; }
+    }
+
+    .sector-container {
+        > .collapsible__control {
+            padding: 0 1.4em;
+            margin-bottom: 2em;
+            text-align: left;
+            font-size: 110%;
+
+            > a {
+                padding-left: 0;
+                padding-right: 0;
+            }
+        }
+
+        &.collapsed {
+            > .collapsible__control { margin-top: .35em; }
+        }
     }
 }
