[INIT] Branch init.

--- a/6-components/_components.banners.scss
+++ b/6-components/_components.banners.scss
@@ -3,6 +3,8 @@
 ===============================*/
 
 
+/**TODO: Redesign */
+
 /* Banner with background cover */
 
 $banner-cover-max-width:    1200px;
