[ENH] Fully migrated to the newest stable versions of neat and bourbon

--- a/1-settings/_settings.base.scss
+++ b/1-settings/_settings.base.scss
@@ -5,11 +5,10 @@
 /* Configs, brand colors, spacing units, paths and more, defined as variables. */
 
 // *Note*: Imports are order sensitive!
-@import 'settings._imports.scss';
+@import 'settings._imports.scss'; /** IMPORTANT: MUST BE included first */
 @import 'settings.paths.scss';
 @import 'settings.fonts.scss';
 @import 'settings.colours.scss';
 @import 'settings.global.scss';
 @import 'settings.responsive.scss';
 @import 'settings.libs-overrides.scss';
-
