--- a/1-settings/_settings.fonts.scss
+++ b/1-settings/_settings.fonts.scss
@@ -9,10 +9,12 @@ $font-victoria:         'National' !default;
 $font-victoria-icons:   'VicIcons' !default;
 
 
-$weight-thin:       200 !default;
-$weight-light:      300 !default;
-$weight-normal:     400 !default;
-$weight-semibold:   600 !default;
-$weight-bold:       700 !default;
-$weight-extrabold:  800 !default;
+/** Available weights */
 
+$weight-thin:      200;
+$weight-light:     300;
+$weight-normal:    400;
+$weight-medium:    500; // *DO NOT* use for headings
+$weight-semibold:  600;
+$weight-bold:      700; // *DO NOT* use for headings
+$weight-extrabold: 800;
