--- a/1-settings/_settings.libs-overrides.scss
+++ b/1-settings/_settings.libs-overrides.scss
@@ -1,14 +1,10 @@
-/*==================================================================
-=            LIBRARIES AND 3RD PARTY SETTINGS OVERRIDES            =
-==================================================================*/
+/*=============================================================================
+=                LIBRARIES AND 3RD PARTY SETTINGS OVERRIDES                   =
+==============================================================================*/
 
 
-/* ===== NEAT LAYOUT & GRID ================================================= */
-
-
-$max-width:         $base-width;
-
-// $grid-columns:   12;
-// $column:         modular-scale( 3, 1em, $golden );
-// $gutter:         modular-scale(1, 1em, $golden) !default;
-
+// Default grid options override - see more at http://neat.bourbon.io/docs/2.1.0/
+$neat-grid: (
+    columns: 12,
+    gutter: 0
+)
