--- a/6-components/_components.simple-blocks.scss
+++ b/6-components/_components.simple-blocks.scss
@@ -1,5 +1,3 @@
-
-
 /*===============================
 =           FUN FACT BLOCK      =
 ===============================*/
@@ -39,7 +37,6 @@ $fun-fact-bg-color: $grey-gallery;
         margin-bottom: .5em;
         font-size: $h2-size * 1.35;
     }
-
 }
 
 
@@ -271,10 +268,11 @@ $nm-bg-color: $grey-gallery;
 }
 
 .explore-page {
-    @include outer-container;
+    @include centralise;
+
     .block {
         @include breakpoint ($tablet-and-bigger) {
-            @include span-columns (4);
+            @include grid-container (4);
         }
     }
 }
