[ENH] Cleans up core.

--- a/1-settings/_settings._imports.scss
+++ b/1-settings/_settings._imports.scss
@@ -1,5 +1,5 @@
 /*=============================================================================
-=                             IMPORT DEPENDENCIES                             =
+=                   IMPORT 3RD PARTY SASS DEPENDENCIES                        =
 ==============================================================================*/
 
 // *Note*: This file includes dependencies and *MUST BE* included as a first file in the entire UI framework.
