--- a/1-settings/_settings.responsive.scss
+++ b/1-settings/_settings.responsive.scss
@@ -1,6 +1,6 @@
-/*=========================================================
-=            RESPONSIVE SETTINGS AND VARIABLES            =
-=========================================================*/
+/*=============================================================================
+=                                  RESPONSIVENESS                            =
+==============================================================================*/
 
 
 /* ===== PROPERTIES ========================================================= */
