--- a/2-tools/_tools.base.scss
+++ b/2-tools/_tools.base.scss
@@ -1,12 +1,10 @@
-/*=============================
-=            TOOLS            =
-=============================*/
+/*=============================================================================
+=                                TOOLS - IMPORTS                              =
+==============================================================================*/
 
 /* Global Mixins & Helper functions. */
 
+
 // *Note*: Imports are order sensitive
-
-
-// Victoria mixins collection
 @import 'tools.mixins.scss';
 
