--- a/2-tools/_tools.mixins.scss
+++ b/2-tools/_tools.mixins.scss
@@ -1,13 +1,11 @@
-/*==================================================
-=            VICTORIA MIXINS COLLECTION            =
-==================================================*/
+/*=============================================================================
+=                     VICTORIA - UI KIT MIXINS COLLECTION                     =
+==============================================================================*/
 
 // Mixins collection that can be used to simplify SCSS development.
 //
 // *HIGHLY RECOMMENDED* to read through all available mixins before
 // start of active development!
-
-
 
 
 
