--- a/3-generic/_generic.base.scss
+++ b/3-generic/_generic.base.scss
@@ -1,9 +1,12 @@
-/*================================
-=            GENERIC             =
-================================*/
+/*=============================================================================
+=                              GENERIC - IMPORTS                              =
+==============================================================================*/
+
 
 /* Low specificity definitions - Resets, normalisation,
 imports of external styles and fonts. */
+
+
 
 @import 'generic.fonts.scss';
 @import 'generic.resets.scss';
