--- a/3-generic/_generic.fonts.scss
+++ b/3-generic/_generic.fonts.scss
@@ -1,12 +1,12 @@
-/*=======================================
-=            IMPORT OF FONTS            =
-=======================================*/
+/*=============================================================================
+=                              GENERIC - IMPORTS                              =
+==============================================================================*/
 
 
 /* ===== DEFINE & IMPORT FONTS ============================================== */
 
 
-// Victoria's
+// Victoria's font
 
 @include font-face( $font-victoria, "#{$path-font-victoria}-Regular", $weight-normal, $file-formats: ttf woff woff2 );
 @include font-face( $font-victoria, "#{$path-font-victoria}-Semibold", $weight-semibold, $file-formats: ttf woff woff2 );
