--- a/4-base/_base.base.scss
+++ b/4-base/_base.base.scss
@@ -1,9 +1,11 @@
-/*==================================================
-=            BASE (NON-SPECIFIC) RULES             =
-==================================================*/
+/*=============================================================================
+=                               BASE - IMPORTS                                =
+==============================================================================*/
 
 
 /* Non-specific elements (= without classes or IDs), eg. body, h1, p etc. */
+
+
 
 @import 'base.inputs';
 @import 'base.layout';
